prevent unwanted horizontal scrolling

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -79,3 +79,6 @@ select {
   }
 }
 
+main {
+  width: 100%;
+}
